spacing fixed

--- a/client/src/styling/components/home/DatesComponent.css
+++ b/client/src/styling/components/home/DatesComponent.css
@@ -1,11 +1,13 @@
-.dates-component {
+body {
     background-color: #114B70;
 }
 .dates-container {
+    margin-top: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 30px 0px;
 }
 .date {
     color: white;
@@ -13,6 +15,11 @@
 }
 
 .date-heading {
+    font-size: 30px;
     color: white;  
     text-align: center;
+    margin-bottom: 0;
+}
+hr {
+    width: 90%;
 }
